# GameTree

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  demo_sfml.cpp  gametree.cpp  gametree.h  gt_base.h  gt_entity.h  gt_map.h  gt_sprite.h  gt_view.h
asepritereader/: CMakeLists.txt  aseprite2gt.cpp  asepritereader.cpp  asepritereader.h
demo_assets/: CMakeLists.txt  Ground.tsx  Npc_Generic_019.aseprite  README.md  Terrain.tsx  build_assets.sh  demo_map.tiled-project  demo_map.tiled-session
demo_assets/Aseprite/: Samurai.aseprite
demo_assets/Tiled/: Autotiles.tsx  DemoMap.tmx  ItemsTiles.tsx  Overworld16.tsx  Passability.tsx
demo_assets/outputs/: DemoMap.tmx.json  Npc_Generic_019.json  Samurai.json  Samurai.json.json  Samurai.json_a2gt_out.json
gtree_sfml/: CMakeLists.txt  aseprite2sfml.h  gtree_sfml.cpp  gtree_sfml.h  sfmlmap.cpp  sfmlmap.h  sfmlsprite.cpp  sfmlsprite.h  tiled2sfml.cpp  tiled2sfml.h
sfml_assets/: CMakeLists.txt  aseprite2sfml.cpp  aseprite2sfml.h  sfmlmap.h  sfmlsprite.h  tiled2sfml.h
tiledreader/: CMakeLists.txt  tiled2gt.cpp  tiledreader.cpp  tiledreader.h
tiledreader/crunch_modified/: CMakeLists.txt  README.md  bitmap.cpp  bitmap.hpp  crunch_main.cpp  crunch_main.h  packer.cpp  packer.hpp
tiledreader/libtess2_modified/: CMakeLists.txt  README2.md  bucketalloc.c  dict.c  mesh.h  priorityq.c  tess.h
